2013-06-08  Tobias Burnus  <burnus@net-b.de>

PR fortran/57553
        * simplify.c (gfc_simplify_storage_size): Handle literal
        strings.
        * trans-intrinsic.c (gfc_conv_intrinsic_storage_size):
        Add missing fold_convert.

2013-06-08  Tobias Burnus  <burnus@net-b.de>

        PR fortran/57553
        * gfortran.dg/storage_size_4.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@199850 138bc75d-0d04-0410-961f-82ee72b054a4